# tripleo-quickstart-add-host-builder

./: README.md  setup.cfg
playbooks/: dci-trigger.yml
roles/add-host-builder/tasks/: main.yml
roles/add-host-builder/templates/: add_host.j2
