[metadata]
name = tripleo-quickstart-add-host-builder
summary = Add a simple add_host file for importing
description-file =
    README.md
author = Leif Madsen
author-email = lmadsen@redhat.com
home-page = https://code.engineering.redhat.com/gerrit/gitweb?p=tripleo-environments.git
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    playbooks = playbooks/*
    usr/local/share/ansible/roles = roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
